--- a/challange1/notebooks/soil_inferrence.ipynb
+++ b/challange1/notebooks/soil_inferrence.ipynb
@@ -2,6 +2,14 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Author: Soumyadip Mukherjee\n",
+        "Team Name: Soumo275\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "K4YEpbr8JpA7"
       },
