--- a/challange1/notebooks/soil_training.ipynb
+++ b/challange1/notebooks/soil_training.ipynb
@@ -4,10 +4,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Author: Soumyadip Mukherjee, Aaryaa Sastry\n",
+        "Author: Soumyadip Mukherjee\n",
         "Team Name: Soumo275\n",
-        "Team Members: Soumyadip Mukherjee, Aaryaa Sastry\n",
-        "Leaderboard Rank: 47\n"
+        "Team Members: Soumyadip Mukherjee\n",
+        "Leaderboard Rank: 47"
       ]
     },
     {
