--- a/challange1/src/soil_preprocessing.ipynb
+++ b/challange1/src/soil_preprocessing.ipynb
@@ -6,9 +6,9 @@
         "id": "lOI8H7Z5HLv0"
       },
       "source": [
-        "Author: Soumyadip Mukherjee, Aaryaa Sastry\n",
+        "Author: Soumyadip Mukherjee\n",
         "Team Name: Soumo275\n",
-        "Team Members: Soumyadip Mukherjee, Aaryaa Sastry\n",
+        "Team Members: Soumyadip Mukherjee\n",
         "Leaderboard Rank: 47"
       ]
     },
