--- a/challange2/notebooks/soil_2_inferrence.ipynb
+++ b/challange2/notebooks/soil_2_inferrence.ipynb
@@ -1,21 +1,22 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Author: Soumyadip Mukherjee\n",
+        "Team Name: Soumo275\n",
+        "Team Members: Soumyadip Mukherjee\n",
+        "Leaderboard Rank: 38"
+      ]
+    },
+    {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "6ca4DD4XoFKn"
+      },
+      "outputs": [],
       "source": [
         "import zipfile\n",
         "import os\n",
@@ -23,12 +24,7 @@
         "zip_path = \"/content/soil-classification-part-2.zip\"\n",
         "with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
         "    zip_ref.extractall(\"soil-classification\")"
-      ],
-      "metadata": {
-        "id": "6ca4DD4XoFKn"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -67,5 +63,19 @@
         "print(f\"✅ Saved {len(df)} predictions\")\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
