--- a/challange2/notebooks/soil_classification_2_full.ipynb
+++ b/challange2/notebooks/soil_classification_2_full.ipynb
@@ -1,26 +1,18 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "!pip install opencv-python scikit-learn matplotlib\n"
-      ],
+        "Author: Soumyadip Mukherjee\n",
+        "Team Name: Soumo275\n",
+        "Team Members: Soumyadip Mukherjee\n",
+        "Leaderboard Rank: 38"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -28,11 +20,10 @@
         "id": "G7qQiECQblq7",
         "outputId": "984a4289-68d6-4f8f-a2ec-6e52a9052ffb"
       },
-      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: opencv-python in /usr/local/lib/python3.11/dist-packages (4.11.0.86)\n",
             "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.11/dist-packages (1.6.1)\n",
@@ -52,6 +43,9 @@
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install opencv-python scikit-learn matplotlib\n"
       ]
     },
     {
@@ -72,43 +66,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "import os\n",
-        "from pathlib import Path\n",
-        "import numpy as np\n",
-        "from sklearn.svm import OneClassSVM\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "from tensorflow.keras.applications import ResNet50\n",
-        "from tensorflow.keras.preprocessing.image import load_img, img_to_array\n",
-        "import joblib\n",
-        "\n",
-        "# Configuration\n",
-        "model = ResNet50(weights='imagenet', include_top=False, pooling='avg')\n",
-        "scaler = StandardScaler()\n",
-        "img_size = (224, 224)\n",
-        "train_path = '/content/soil-classification/soil_competition-2025/train'\n",
-        "\n",
-        "# Feature extraction\n",
-        "def get_features(img_path):\n",
-        "    img = load_img(img_path, target_size=img_size)\n",
-        "    x = img_to_array(img).reshape(1, *img_size, 3)\n",
-        "    return model.predict(x).flatten()\n",
-        "\n",
-        "# Process images\n",
-        "features = []\n",
-        "for img_file in Path(train_path).glob('*'):\n",
-        "    if img_file.suffix.lower() in ('.jpg', '.jpeg', '.png'):\n",
-        "        try:\n",
-        "            features.append(get_features(str(img_file)))\n",
-        "        except Exception as e:\n",
-        "            print(f\"Error: {img_file.name} - {str(e)}\")\n",
-        "\n",
-        "# Train model\n",
-        "X = scaler.fit_transform(features)\n",
-        "ocsvm = OneClassSVM(kernel='rbf', nu=0.1).fit(X)\n",
-        "joblib.dump((ocsvm, scaler), 'soil_model.pkl')\n",
-        "print(f\"Trained on {len(X)} samples | Model saved\")\n"
-      ],
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -116,11 +74,10 @@
         "id": "_kvYLP01dxiD",
         "outputId": "ecb49cbb-166b-4645-b29c-581083e257e8"
       },
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 4s/step\n",
             "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 47ms/step\n",
@@ -1339,39 +1296,48 @@
             "Trained on 1214 samples | Model saved\n"
           ]
         }
+      ],
+      "source": [
+        "import os\n",
+        "from pathlib import Path\n",
+        "import numpy as np\n",
+        "from sklearn.svm import OneClassSVM\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from tensorflow.keras.applications import ResNet50\n",
+        "from tensorflow.keras.preprocessing.image import load_img, img_to_array\n",
+        "import joblib\n",
+        "\n",
+        "# Configuration\n",
+        "model = ResNet50(weights='imagenet', include_top=False, pooling='avg')\n",
+        "scaler = StandardScaler()\n",
+        "img_size = (224, 224)\n",
+        "train_path = '/content/soil-classification/soil_competition-2025/train'\n",
+        "\n",
+        "# Feature extraction\n",
+        "def get_features(img_path):\n",
+        "    img = load_img(img_path, target_size=img_size)\n",
+        "    x = img_to_array(img).reshape(1, *img_size, 3)\n",
+        "    return model.predict(x).flatten()\n",
+        "\n",
+        "# Process images\n",
+        "features = []\n",
+        "for img_file in Path(train_path).glob('*'):\n",
+        "    if img_file.suffix.lower() in ('.jpg', '.jpeg', '.png'):\n",
+        "        try:\n",
+        "            features.append(get_features(str(img_file)))\n",
+        "        except Exception as e:\n",
+        "            print(f\"Error: {img_file.name} - {str(e)}\")\n",
+        "\n",
+        "# Train model\n",
+        "X = scaler.fit_transform(features)\n",
+        "ocsvm = OneClassSVM(kernel='rbf', nu=0.1).fit(X)\n",
+        "joblib.dump((ocsvm, scaler), 'soil_model.pkl')\n",
+        "print(f\"Trained on {len(X)} samples | Model saved\")\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from pathlib import Path\n",
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "from tensorflow.keras.applications import ResNet50\n",
-        "from tensorflow.keras.preprocessing.image import load_img\n",
-        "import joblib\n",
-        "\n",
-        "# Config\n",
-        "model = ResNet50(weights='imagenet', include_top=False, pooling='avg')\n",
-        "df = pd.read_csv('/content/soil-classification/soil_competition-2025/test_ids.csv')\n",
-        "clf, scaler = joblib.load('soil_ocsvm_model.pkl')\n",
-        "\n",
-        "# Feature extraction\n",
-        "def extract_features(path):\n",
-        "    img = load_img(path, target_size=(224, 224))\n",
-        "    arr = np.expand_dims(img, axis=0)  # Add batch dimension\n",
-        "    return model.predict(arr).flatten()\n",
-        "\n",
-        "# Prediction loop\n",
-        "df['predicted_label'] = [\n",
-        "    (1 if clf.predict(scaler.transform(extract_features(Path(test_dir)/row['image_id']).reshape(1,-1)))[0] == 1 else 0)\n",
-        "    if Path.exists(Path(test_dir)/row['image_id']) else -1\n",
-        "    for _, row in df.iterrows()\n",
-        "]\n",
-        "\n",
-        "df.to_csv('test_predictions.csv', index=False)\n",
-        "print(f\"✅ Saved {len(df)} predictions\")\n"
-      ],
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1379,11 +1345,10 @@
         "id": "6A97TniRd4Yq",
         "outputId": "9e560c2c-07e1-49f7-b638-55e300cb0421"
       },
-      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 3s/step\n",
             "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 43ms/step\n",
@@ -2355,10 +2320,56 @@
             "✅ Saved 967 predictions\n"
           ]
         }
+      ],
+      "source": [
+        "from pathlib import Path\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from tensorflow.keras.applications import ResNet50\n",
+        "from tensorflow.keras.preprocessing.image import load_img\n",
+        "import joblib\n",
+        "\n",
+        "# Config\n",
+        "model = ResNet50(weights='imagenet', include_top=False, pooling='avg')\n",
+        "df = pd.read_csv('/content/soil-classification/soil_competition-2025/test_ids.csv')\n",
+        "clf, scaler = joblib.load('soil_ocsvm_model.pkl')\n",
+        "\n",
+        "# Feature extraction\n",
+        "def extract_features(path):\n",
+        "    img = load_img(path, target_size=(224, 224))\n",
+        "    arr = np.expand_dims(img, axis=0)  # Add batch dimension\n",
+        "    return model.predict(arr).flatten()\n",
+        "\n",
+        "# Prediction loop\n",
+        "df['predicted_label'] = [\n",
+        "    (1 if clf.predict(scaler.transform(extract_features(Path(test_dir)/row['image_id']).reshape(1,-1)))[0] == 1 else 0)\n",
+        "    if Path.exists(Path(test_dir)/row['image_id']) else -1\n",
+        "    for _, row in df.iterrows()\n",
+        "]\n",
+        "\n",
+        "df.to_csv('test_predictions.csv', index=False)\n",
+        "print(f\"✅ Saved {len(df)} predictions\")\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VihRE69hlJtv",
+        "outputId": "cb95d7e0-5273-4872-c169-b2873c1f7f33"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "F1 Score: 0.9151785714285714\n"
+          ]
+        }
+      ],
       "source": [
         "from sklearn.metrics import f1_score\n",
         "from sklearn.model_selection import train_test_split\n",
@@ -2374,24 +2385,23 @@
         "\n",
         "f1 = f1_score(y_true, y_pred, pos_label=1)\n",
         "print(\"F1 Score:\", f1)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "VihRE69hlJtv",
-        "outputId": "cb95d7e0-5273-4872-c169-b2873c1f7f33"
-      },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "F1 Score: 0.9151785714285714\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
